--- a/style.css
+++ b/style.css
@@ -45,7 +45,16 @@ aside.sidebar {
 }
 
 .contact-info li {
+    display: flex;
+    align-items: center;
     margin-bottom: 10px;
+}
+
+.contact-info img.icon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    fill: currentColor;
 }
 
 .contact-info a {
